# tree-sitter-odin

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml
bindings/c/: tree-sitter-odin.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_odin/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: odin.h
bindings/swift/TreeSitterOdin/: odin.h
bindings/swift/TreeSitterOdinTests/: TreeSitterOdinTests.swift
queries/: highlights.scm  indents.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  scanner.c
test/corpus/: declarations.txt
